# bitcoin

./: .gitkeep  ARCHITECTURE.md  README.md  index.html  styles.css
backend/: Cargo.toml
backend/src/: federation.rs  main.rs  models.rs
frontend/: index.html  package.json
frontend/src/: App.jsx  styles.css
